# UniParser-Tools

./: .gitignore  README.md  pyproject.toml  requirements.txt
playground/: 01.quick_start.ipynb  02.advance.ipynb  03.semantic_recognition_vl.ipynb  app.caption_extraction.ipynb  app.molecule_extracrtion.ipynb  private.semantic_recognition_pipeline.ipynb
uniparser_tools/: __init__.py
uniparser_tools/api/: clients.py
uniparser_tools/common/: constant.py  dataclass.py
uniparser_tools/order/: gap_tree.py  naive_order.py  structure_order.py  xy_cut.py  xy_cut_exp.py
uniparser_tools/tools/caption_extraction/: main.py
uniparser_tools/utils/: bbox.py  convert.py  fileio.py  image.py  log.py  processor.py
